# IRCC-Application-Tracker

./: .env.sample  .gitignore  LICENSE  app.py  pyproject.toml
templates/: index.html
