[tool.poetry]
name = "ircc-application-tracker"
version = "0.1.0"
description = "Check Canadian IRCC application status"
authors = ["introkun <introkun@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
boto3 = "^1.34.76"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
